--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
-<h1>Hello</h1>
+<h1>Hello Curtain Modal</h1>
 
 <!-- <template #alertContainer></template> -->
-<button (click)="createComponent('success')">Create success alert</button>
-    <button (click)="createComponent('danger')">Create danger alert</button>
-    <button (click)="remove()">Create danger alert</button>
+<button (click)="createComponent('success')">Create Multiple Modals </button>
